# espfsp

./: CMakeLists.txt  idf_component.yml
streamer/: espfsp_client_play.c  espfsp_client_push.c  espfsp_message_buffer.c  espfsp_params_map.c  espfsp_server.c  espfsp_sock_op.c  mdns_helper.c  streamer_hal.c
streamer/camera/: streamer_camera.c  streamer_camera_controler.c  streamer_camera_sender.c
streamer/central/: streamer_central.c  streamer_central_camera_controler.c  streamer_central_camera_receiver.c  streamer_central_camera_receiver_message_processor.c  streamer_central_client_controler.c  streamer_central_receiver.c  streamer_central_receiver_message_processor.c  streamer_central_remote_accessor_controler.c  streamer_central_remote_accessor_sender.c  streamer_central_sender.c
streamer/client/: streamer_client.c  streamer_client_central_controler.c  streamer_client_central_receiver.c  streamer_client_central_receiver_message_processor.c  streamer_client_controler.c  streamer_client_receiver.c  streamer_client_receiver_message_processor.c
streamer/client_common/: espfsp_data_task.c  espfsp_session_and_control_task.c
streamer/client_play/: espfsp_comm_proto_conf.c  espfsp_comm_proto_handlers.c  espfsp_data_proto_conf.c  espfsp_data_task.c  espfsp_session_and_control_task.c
streamer/client_push/: espfsp_comm_proto_conf.c  espfsp_comm_proto_handlers.c  espfsp_data_proto_conf.c  espfsp_data_task.c  espfsp_session_and_control_task.c
streamer/comm_proto/: espfsp_comm_proto.c
streamer/data_proto/: espfsp_data_proto.c  espfsp_data_recv_proto.c  espfsp_data_send_proto.c  espfsp_data_signal.c
streamer/include/: espfsp_cam_config.h  espfsp_client_play.h  espfsp_client_push.h  espfsp_config.h  espfsp_frame_config.h  espfsp_server.h  streamer_common.h  streamer_hal.h
streamer/include/camera/: streamer_camera.h
streamer/include/central/: streamer_central.h
streamer/include/client/: streamer_client.h
streamer/private_include/: espfsp_cam_config.h  espfsp_config.h  espfsp_frame_config.h  espfsp_message_buffer.h  espfsp_message_defs.h  espfsp_params_map.h  espfsp_sock_op.h  mdns_helper.h  streamer_message_types.h
streamer/private_include/camera/: streamer_camera_controler.h  streamer_camera_sender.h  streamer_camera_types.h
streamer/private_include/central/: streamer_central_camera_controler.h  streamer_central_camera_receiver.h  streamer_central_camera_receiver_message_processor.h  streamer_central_client_controler.h  streamer_central_receiver.h  streamer_central_receiver_message_processor.h  streamer_central_remote_accessor_controler.h  streamer_central_remote_accessor_sender.h  streamer_central_sender.h  streamer_central_types.h
streamer/private_include/client/: streamer_client_central_controler.h  streamer_client_central_receiver.h  streamer_client_central_receiver_message_processor.h  streamer_client_receiver.h  streamer_client_types.h
streamer/private_include/client_common/: espfsp_data_task.h  espfsp_session_and_control_task.h
streamer/private_include/client_play/: espfsp_client_play_state_def.h  espfsp_comm_proto_conf.h  (+6 more)
streamer/server/: espfsp_client_play_data_task.c  espfsp_client_play_session_and_control_task.c  espfsp_client_push_data_message_processor.c  espfsp_client_push_data_task.c  espfsp_client_push_session_and_control_task.c  espfsp_comm_proto_conf.c  espfsp_comm_proto_handlers.c  espfsp_data_proto_conf.c  espfsp_data_task.c  espfsp_session_and_control_task.c  espfsp_session_manager.c
(+26 files in other folders)
